<resources>
    <string name="app_name">Syllabus</string>
    <string name="college_name">Goswami Ganesh Dutta College</string>
    <string name="college_name_sec">S.D College</string>
    <string name="college_add">Sec-32B, Chandigarh</string>
    <string name="bca">BCA</string>
    <string name="select_your_course">Select Your Course</string>
    <string name="suggest_us_new_course">Suggest us new course</string>
    <string name="semester">Semester</string>
    <string name="sem_i">Sem-I</string>
    <string name="sem_ii">Sem-II</string>
    <string name="sem_iii">Sem-III</string>
    <string name="sem_iv">Sem-IV</string>
    <string name="sem_v">Sem-V</string>
    <string name="sem_vi">Sem-VI</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="feedback">Feedback</string>
    <string name="your_name">Your name</string>
    <string name="say_something">Say something</string>
    <string name="loading">loading</string>
    <string name="page_is_loading">Page is loading</string>
    <string name="sent">Sent</string>
    <string name="okay">Okay</string>
    <string name="suggestion">Suggestion</string>
    <string name="course_name">Course Name</string>
</resources>