<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logo_bg"
        android:alpha="0.27"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@drawable/bg" />

    <ImageView
        android:id="@+id/logo"
        android:alpha="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_graduation" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        android:layout_below="@id/logo">

        <RelativeLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/college_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/cambay_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/college_name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/college_name_sec_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/college_name_text"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/cambay_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/college_name_sec"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/college_add_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/college_name_sec_text"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/cambay_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/college_add"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>