<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/feedSent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/animate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_sent" />

        <TextView
            android:id="@+id/feedbacksent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:gravity="center"
            android:text="@string/sent"
            android:textColor="@color/bg"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/closefeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbacksent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:background="@color/yellow"
            android:text="@string/okay"
            android:textColor="@color/bg" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/dev_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="Devs"
            android:textColor="@color/bg"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dev_head"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Umang Mishra"
                    android:textColor="@color/bg"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/github_umang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_github" />

                    <ImageView
                        android:id="@+id/gmail_umang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_gmail" />

                    <ImageView
                        android:id="@+id/linkedIn_umang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_linkedin" />

                    <ImageView
                        android:id="@+id/insta_umang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_instagram" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/utsav_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Utsav Devadiga"
                    android:textColor="@color/bg"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/github_utsav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_github" />

                    <ImageView
                        android:id="@+id/gmail_utsav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_gmail" />

                    <ImageView
                        android:id="@+id/linkedIn_utsav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_linkedin" />

                    <ImageView
                        android:id="@+id/insta_utsav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_instagram" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mainlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rate_this_app"
            android:textColor="@color/bg"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.hsalf.smileyrating.SmileyRating
            android:id="@+id/smile_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/feedbackBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/feedback"
                android:textColor="@color/bg"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/editbox"
                android:gravity="top"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:padding="16dp"

                />

            <EditText
                android:id="@+id/UserFeedBack"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:background="@drawable/editbox"
                android:gravity="top"
                android:hint="@string/say_something"
                android:inputType="text|textMultiLine"
                android:padding="16dp"

                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sendfeedback"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_send"
                    android:drawablePadding="3dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="Send"
                    android:textAllCaps="false"
                    android:textColor="@color/bg"
                    tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />

                <Button
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_share"
                    android:drawablePadding="3dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="Share this App"
                    android:textAllCaps="false"
                    android:textColor="@color/bg"
                    tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>